--- a/PRPCA/PRPCA/Base.lproj/Main.storyboard
+++ b/PRPCA/PRPCA/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="slL-Md-zIY">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,19 +10,109 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Item 2-->
+        <scene sceneID="fYd-gg-F9t">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PRPCA" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="pvf-H2-sOe" customClass="PRPCAResultsViewController" customModule="PRPCA" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="HHG-fS-gb4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Gbi-qc-mfG"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="oPY-h3-xB9"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fsY-Fk-Haj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="780" y="98"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="RYH-iS-blD">
+            <objects>
+                <viewController id="XuA-PA-H0r" customClass="VideoClipsViewController" customModule="PRPCA" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sPE-x1-lzN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dCv-Kl-iwN">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="tpl-PG-f0W">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tpl-PG-f0W" id="QAt-8Q-a1G">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CcZ-GO-jrZ">
+                                <rect key="frame" x="238" y="550" width="60" height="60"/>
+                                <color key="backgroundColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="7Jx-Nm-Gnw"/>
+                                    <constraint firstAttribute="height" constant="60" id="kag-ns-4cM"/>
+                                </constraints>
+                                <state key="normal" title="Roll">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="loadCameraRoll:" destination="XuA-PA-H0r" eventType="touchUpInside" id="Co2-gY-qNM"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8WH-9E-79C">
+                                <rect key="frame" x="307" y="550" width="60" height="60"/>
+                                <color key="backgroundColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="NLD-qJ-uAK"/>
+                                    <constraint firstAttribute="width" constant="60" id="sRk-hj-BnM"/>
+                                </constraints>
+                                <state key="normal" title="Cam">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="loadCamera:" destination="XuA-PA-H0r" eventType="touchUpInside" id="Mc1-on-5Uc"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="f62-tO-ixr" firstAttribute="bottom" secondItem="dCv-Kl-iwN" secondAttribute="bottom" id="B06-Tc-hnz"/>
+                            <constraint firstItem="dCv-Kl-iwN" firstAttribute="top" secondItem="f62-tO-ixr" secondAttribute="top" id="F7B-xh-xcz"/>
+                            <constraint firstItem="f62-tO-ixr" firstAttribute="bottom" secondItem="CcZ-GO-jrZ" secondAttribute="bottom" constant="8" id="Fmf-ai-mIs"/>
+                            <constraint firstItem="f62-tO-ixr" firstAttribute="bottom" secondItem="8WH-9E-79C" secondAttribute="bottom" constant="8" id="aSa-zL-we7"/>
+                            <constraint firstItem="f62-tO-ixr" firstAttribute="trailing" secondItem="dCv-Kl-iwN" secondAttribute="trailing" id="eLE-y1-FO9"/>
+                            <constraint firstItem="dCv-Kl-iwN" firstAttribute="leading" secondItem="f62-tO-ixr" secondAttribute="leading" id="fnm-8j-aOK"/>
+                            <constraint firstItem="8WH-9E-79C" firstAttribute="leading" secondItem="CcZ-GO-jrZ" secondAttribute="trailing" constant="9" id="ghy-xn-JLJ"/>
+                            <constraint firstItem="f62-tO-ixr" firstAttribute="trailing" secondItem="8WH-9E-79C" secondAttribute="trailing" constant="8" id="mYw-6V-4AL"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="f62-tO-ixr"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="otS-bO-1pA"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mwk-4V-uFG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="760.79999999999995" y="-565.36731634182911"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="DnN-Q7-Mgb">
+            <objects>
+                <tabBarController id="slL-Md-zIY" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eOr-w4-qf0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="XuA-PA-H0r" kind="relationship" relationship="viewControllers" id="kP7-Xw-aeW"/>
+                        <segue destination="pvf-H2-sOe" kind="relationship" relationship="viewControllers" id="h30-Ub-bEv"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qhm-N1-ghf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-190" y="-233"/>
         </scene>
     </scenes>
 </document>
