--- a/PRPCA/PRPCA/Base.lproj/Main.storyboard
+++ b/PRPCA/PRPCA/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,14 +18,174 @@
                     <view key="view" contentMode="scaleToFill" id="HHG-fS-gb4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2Oj-DL-hWf">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="107" id="YSn-rb-oMX">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="107"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YSn-rb-oMX" id="2tw-uQ-hJV">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="106.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OOv-Gj-b49">
+                                                    <rect key="frame" x="15" y="18" width="126" height="71"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="126" id="aGR-Dv-wJ3"/>
+                                                        <constraint firstAttribute="height" constant="71" id="dS2-lp-qjW"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Result Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sa2-Sb-KAk">
+                                                    <rect key="frame" x="149" y="43" width="92" height="21"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="OOv-Gj-b49" firstAttribute="top" secondItem="2tw-uQ-hJV" secondAttribute="top" constant="18" id="88M-bP-kcz"/>
+                                                <constraint firstItem="Sa2-Sb-KAk" firstAttribute="centerY" secondItem="OOv-Gj-b49" secondAttribute="centerY" id="ZHo-Lj-Q87"/>
+                                                <constraint firstAttribute="bottom" secondItem="OOv-Gj-b49" secondAttribute="bottom" constant="17.5" id="flA-G4-gOt"/>
+                                                <constraint firstItem="Sa2-Sb-KAk" firstAttribute="leading" secondItem="OOv-Gj-b49" secondAttribute="trailing" constant="8" id="utm-CJ-Xfd"/>
+                                                <constraint firstItem="OOv-Gj-b49" firstAttribute="leading" secondItem="2tw-uQ-hJV" secondAttribute="leading" constant="15" id="zqM-Up-1b2"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LVk-Hp-JpZ">
+                                <rect key="frame" x="307" y="550" width="60" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Reload">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="reloadButton:" destination="pvf-H2-sOe" eventType="touchUpInside" id="RZI-Qu-1IW"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oHe-pD-UNu">
+                                <rect key="frame" x="0.0" y="159" width="375" height="196"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Gbi-qc-mfG" firstAttribute="trailing" secondItem="2Oj-DL-hWf" secondAttribute="trailing" id="Hsl-ok-WIW"/>
+                            <constraint firstItem="Gbi-qc-mfG" firstAttribute="bottom" secondItem="2Oj-DL-hWf" secondAttribute="bottom" id="LOX-Yx-gKX"/>
+                            <constraint firstItem="2Oj-DL-hWf" firstAttribute="top" secondItem="Gbi-qc-mfG" secondAttribute="top" id="s8W-Fi-dIc"/>
+                            <constraint firstItem="2Oj-DL-hWf" firstAttribute="leading" secondItem="Gbi-qc-mfG" secondAttribute="leading" id="xR1-Da-rVY"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Gbi-qc-mfG"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 2" id="oPY-h3-xB9"/>
+                    <connections>
+                        <outlet property="test" destination="oHe-pD-UNu" id="ehm-sG-otE"/>
+                        <segue destination="vTJ-Wv-VEe" kind="show" identifier="resultsDetailsSegue" id="wUc-h8-xAv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fsY-Fk-Haj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="780" y="98"/>
+            <point key="canvasLocation" x="780" y="97.601199400299862"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="V2p-YX-QQQ">
+            <objects>
+                <viewController id="vTJ-Wv-VEe" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cGS-av-8IE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oBd-6h-Yb6">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="220" id="Uqo-wb-vim">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="220"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Uqo-wb-vim" id="bfD-V5-Lyy">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="219.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lAC-9n-t4S">
+                                                    <rect key="frame" x="38" y="42" width="298" height="167.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="lAC-9n-t4S" secondAttribute="height" multiplier="16:9" id="G1t-3r-j9i"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Result Type" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zn2-uU-pcr">
+                                                    <rect key="frame" x="0.0" y="11" width="375" height="21"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OqI-eI-11K">
+                                                    <rect key="frame" x="326" y="6" width="34" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="34" id="Ok5-5m-tIv"/>
+                                                        <constraint firstAttribute="height" constant="30" id="hd4-Zl-9ek"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Save"/>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="lAC-9n-t4S" firstAttribute="centerX" secondItem="bfD-V5-Lyy" secondAttribute="centerX" id="44l-OC-SWH"/>
+                                                <constraint firstAttribute="bottom" secondItem="lAC-9n-t4S" secondAttribute="bottom" constant="10" id="DUC-gV-OGr"/>
+                                                <constraint firstAttribute="trailing" secondItem="zn2-uU-pcr" secondAttribute="trailing" id="IOq-gm-WhD"/>
+                                                <constraint firstItem="zn2-uU-pcr" firstAttribute="top" secondItem="bfD-V5-Lyy" secondAttribute="top" constant="11" id="QZC-Tc-7Et"/>
+                                                <constraint firstItem="OqI-eI-11K" firstAttribute="leading" secondItem="zn2-uU-pcr" secondAttribute="trailing" constant="-49" id="Wcv-Iz-gvk"/>
+                                                <constraint firstItem="OqI-eI-11K" firstAttribute="top" secondItem="bfD-V5-Lyy" secondAttribute="top" constant="6" id="iVp-YF-5PB"/>
+                                                <constraint firstItem="zn2-uU-pcr" firstAttribute="leading" secondItem="bfD-V5-Lyy" secondAttribute="leading" id="noj-YC-obf"/>
+                                                <constraint firstItem="lAC-9n-t4S" firstAttribute="top" secondItem="zn2-uU-pcr" secondAttribute="bottom" constant="10" id="woU-ru-YQa"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="HL2-7h-9Dy" firstAttribute="trailing" secondItem="oBd-6h-Yb6" secondAttribute="trailing" id="76T-yR-92b"/>
+                            <constraint firstItem="HL2-7h-9Dy" firstAttribute="bottom" secondItem="oBd-6h-Yb6" secondAttribute="bottom" id="H1b-1z-BJE"/>
+                            <constraint firstItem="oBd-6h-Yb6" firstAttribute="top" secondItem="HL2-7h-9Dy" secondAttribute="top" id="lf7-JJ-0VP"/>
+                            <constraint firstItem="oBd-6h-Yb6" firstAttribute="leading" secondItem="HL2-7h-9Dy" secondAttribute="leading" id="qj3-UO-tMi"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="HL2-7h-9Dy"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5Hf-Xa-AZa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1610" y="98"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="rb4-AG-oKd">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mBD-7e-ojV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController id="rPg-X6-H8c" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="e4P-hz-dYG">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="KHD-ll-rnC">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KHD-ll-rnC" id="6cG-XH-hwQ">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="rPg-X6-H8c" id="7e3-4q-h3f"/>
+                            <outlet property="delegate" destination="rPg-X6-H8c" id="xjS-Gi-mYC"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+            </objects>
+            <point key="canvasLocation" x="-551" y="600"/>
         </scene>
         <!--Item 1-->
         <scene sceneID="RYH-iS-blD">
@@ -161,6 +322,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N7b-5d-nc9">
                                 <rect key="frame" x="124" y="228" width="30" height="30"/>
                                 <state key="normal" title="Play"/>
+                                <connections>
+                                    <action selector="playVideeClipButton:" destination="8gX-xK-iXb" eventType="touchUpInside" id="2Ev-cc-f0y"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dm3-E0-TQu">
                                 <rect key="frame" x="16" y="20" width="43" height="51"/>
